# SeetaFace2AndroidDemo

./: LICENSE  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Android.mk  Application.mk  CMakeLists.txt  facedetect.cpp  facerecognize.cpp
app/src/main/cpp/include/seeta/: FaceEngine.h  Struct_cv.h
app/src/main/java/com/chihun/learn/seetafacedemo/: FaceDetectorActivity.java  FaceRecognizerActivity.java  MainActivity.java  MyApp.java
app/src/main/java/com/chihun/learn/seetafacedemo/seeta/: FaceDetector.java  FaceRecognizer.java
app/src/main/res/layout/: activity_face_detector.xml  activity_face_recognizer.xml  activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary342/: build.gradle
openCVLibrary342/src/main/: AndroidManifest.xml
openCVLibrary342/src/main/java/org/opencv/android/: CameraBridgeViewBase.java  JavaCameraView.java
